<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WifiScanner</string>
    <string name="title_runs">Runs</string>
    <string name="title_networks">Networks</string>
    <string name="title_stats">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_add_results">Add Results to DB</string>
    <string name="label_scan_runs">Scan Runs</string>
    <string name="label_start_location">Start Location</string>
    <string name="label_end_location">End Location</string>
    <string name="label_description">Description</string>
    <string name="label_end">End:</string>
    <string name="label_start">Start:</string>
    <string name="label_details">Details:</string>
    <string name="label_timestamp">Timestamp:</string>
    <string name="label_level">Level</string>
    <string name="label_ssid">SSID</string>
    <string name="label_bssid">BSSID</string>
    <string name="label_networks">Networks</string>
    <string name="label_stats">Stats</string>
    <string name="filler_start_location">-12.43422,35.432434</string>
    <string name="filler_end_location">-12.443234,32.252343</string>
    <string name="filler_start_time">Feb. 12th 7:45pm</string>
    <string name="filler_end_time">Feb. 12th 9:12pm</string>
    <string name="filler_description">Description Here</string>
    <string name="label_from">From:</string>
    <string name="label_to">To:</string>
    <string name="content_description_wifi_icon">Wifi Security</string>
    <string name="filler_ssid">testWifiAP</string>
    <string name="filler_bssid">11:ff:22:cc:33:ee</string>
    <string name="filler_level">-65 dBm</string>
    <string name="filler_altitude">1750 ft</string>
    <string name="label_records">Records:</string>
    <string name="filler_records">75</string>
    <string name="label_location">Location:</string>
    <string name="label_altitude">Altitude:</string>
    <string name="notif_service_title">WifiGraph Scanner</string>
    <string name="notif_service_content">Scanner is running</string>
</resources>