<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25" >

        <TextView
            android:id="@+id/label_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_start" />

        <TextView
            android:id="@+id/text_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/label_start_time"
            android:text="@string/filler_start_time" />

        <TextView
            android:id="@+id/label_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_start_time"
            android:text="@string/label_end" />

        <TextView
            android:id="@+id/text_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_start_time"
            android:layout_below="@+id/text_start_time"
            android:layout_toRightOf="@+id/label_end_time"
            android:text="@string/filler_end_time" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

	   	<TextView
	   	    android:id="@+id/text_run_description"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_centerHorizontal="true"
	   	    android:text="@string/filler_description" />
	   	
	   	<LinearLayout
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_alignLeft="@+id/text_run_description"
	   	    android:layout_below="@+id/text_run_description"
	   	    android:layout_centerHorizontal="true"
	   	    android:orientation="horizontal" >

		   	<TextView
				android:id="@+id/label_run_count"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_records" />
		    <TextView
		        android:id="@+id/text_run_count"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/filler_records" />
	    </LinearLayout>
    </RelativeLayout>
</LinearLayout>