<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_runsdetail_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_start_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_runsdetail_start_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/filler_start_location" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_runsdetail_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_end_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/text_runsdetail_end_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/filler_end_location" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_runsdetail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/filler_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/list_runsdetail_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

    </ListView>

</LinearLayout>