<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

     <ImageView
         android:id="@+id/imageWifiIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/content_description_wifi_icon"
         android:cropToPadding="true"
         android:maxHeight="30dp"
         android:maxWidth="30dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_wifi_green" />

    <LinearLayout
        android:id="@+id/layoutResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageWifiIcon"
        android:layout_alignTop="@+id/textTimestamp"
        android:layout_toLeftOf="@+id/labelTimestamp"
        android:layout_toRightOf="@+id/imageWifiIcon"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textSSID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/filler_ssid"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/holo_blue_dark" />

            <TextView
                android:id="@+id/textBSSID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/filler_bssid"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelRecords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/label_records"
                    android:textAppearance="@style/MediumText.Alt" />

                <TextView
                    android:id="@+id/textRecords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/filler_records"
                    android:textAppearance="@style/MediumText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/label_level"
                    android:textAppearance="@style/MediumText.Alt" />

                <TextView
                    android:id="@+id/textLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/filler_level"
                    android:textAppearance="@style/MediumText" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.25"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/label_location"
                    android:textAppearance="@style/MediumText.Alt" />

                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:gravity="center"
                    android:text="@string/filler_start_location"
                    android:textAppearance="@style/MediumText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelAltitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/label_altitude"
                    android:textAppearance="@style/MediumText.Alt" />

                <TextView
                    android:id="@+id/textAltitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:gravity="center"
                    android:text="@string/filler_altitude"
                    android:textAppearance="@style/MediumText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:gravity="right"
        android:text="@string/filler_start_time"
        android:textAppearance="@style/MediumText.Italic" />

    <TextView
        android:id="@+id/labelTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textTimestamp"
        android:layout_alignBottom="@+id/textTimestamp"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@+id/textTimestamp"
        android:text="@string/label_timestamp"
        android:textAppearance="@style/MediumText.Alt" />

</RelativeLayout>